--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html lang="ko">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ai_letter/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
     <title>AI NEWS INSIGHT</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
@@ -30,6 +28,5 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
-</html>
+</html> 
